--- a/app/src/main/res/layout/popup_vcc_tourn_lbs.xml
+++ b/app/src/main/res/layout/popup_vcc_tourn_lbs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -16,7 +17,7 @@
 
         <!-- Popup Title -->
 
-        <!-- Species Spinner -->
+        <!-- Species -->
 
         <TextView
             android:id="@+id/txtVccPopupTitle"
@@ -73,29 +74,41 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <Spinner
-                android:id="@+id/spinnerSpeciesVCCLbs"
-                android:layout_width="150dp"
+            <TextView
+                android:id="@+id/tvSpeciesVCCLbs"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_weight=".4"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginEnd="30dp"
                 android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
+                android:text="@string/_0"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerClipColorVCCLbs"
-                android:layout_width="150dp"
+            <TextView
+                android:id="@+id/tvClipColorVCCLbs"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_weight=".2"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="10dp"
                 android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
+                android:text="@string/_0"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -115,26 +128,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" >
 
-            <Spinner
-                android:id="@+id/spinnerLbsTens"
-                android:layout_width="70dp"
+            <TextView
+                android:id="@+id/tvLbsTens"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
+                android:gravity="center"
                 android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
+                android:text="@string/_0"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="40sp"
                 android:textStyle="bold"/>
 
-            <Spinner
-                android:id="@+id/spinnerLbsOnes"
-                android:layout_width="70dp"
+            <TextView
+                android:id="@+id/tvLbsOnes"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_marginEnd="2dp"
+                android:gravity="center"
                 android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
+                android:text="@string/_0"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="40sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -148,14 +163,16 @@
                 android:textSize="20sp"
                 android:textStyle="bold"     />
 
-            <Spinner
-                android:id="@+id/spinnerOunces"
-                android:layout_width="70dp"
+            <TextView
+                android:id="@+id/tvOunces"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:layout_marginEnd="2dp"
+                android:gravity="center"
                 android:background="@color/lite_grey"
-                android:spinnerMode="dialog"
+                android:text="@string/_0"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="40sp"
                 android:textStyle="bold"/>
 
             <TextView
@@ -168,11 +185,11 @@
                 android:textSize="20sp"
                 android:textStyle="bold"     />
 
-
         </LinearLayout>
 
 
         <!-- Save and Cancel Buttons -->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -219,17 +236,6 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnSaveWeight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:background="@drawable/btn_menu_setup"
-                android:text="@string/save_catch"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
         </LinearLayout>
-            </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
